# jxcorlib

./: .gitignore  CMakeLists.txt  CppLinq.h  JxCode.CoreLib.cpp  JxCode.CoreLib.sln  JxCode.CoreLib.vcxproj  JxCode.CoreLib.vcxproj.filters  LICENSE  README.md  cpp.hint
CoreLib/: Assembly.cpp  Assembly.h  Attribute.h  BasicTypes.cpp  BasicTypes.h  CMakeLists.txt  CommonException.cpp  CommonException.h  Converter.hpp  Core.h  CoreLib.h  CoreLibConfig.h  DebugTool.h  DebugTool.hpp  Delegate.h  Enum.cpp  Enum.h  Events.hpp  Exception.cpp  Exception.h  ExceptionBase.h  File.cpp  File.h  Formater.h  Guid.cpp  Guid.h  IInterface.h  IndexString.h  List.h  ManagedVector.h  ManagedVector.hpp  OOPCore.h  Object.cpp  Object.h  Path.cpp  Path.h  Property.h  Property.hpp  Reflection.cpp  Reflection.h  (+13 more)
CoreLib.Extension/: CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.h
CoreLib.Math/: Assembly.h  CMakeLists.txt  Jmath.h  Math.h
CoreLib.Platform/: CMakeLists.txt  FolderWatch.h  Window.h
CoreLib.Serialization/: Assembly.h  BinarySerializer.h  CMakeLists.txt  DataSerializer.cpp  DataSerializer.h  ISerializer.h  JsonSerializer.cpp  JsonSerializer.h
CoreLib.Serializer/: CMakeLists.txt  JsonSerializer.cpp  JsonSerializer.h
Debug/: JxCode.CoreLib.ilk  (+3 more)
Example/: Assembly.h  CMakeLists.txt  OOPTest.cpp  TestDelegate.cpp  TestDynCreateInst.cpp  TestEnum.cpp  TestEvents.cpp  TestFile.cpp  TestFormater.cpp  TestGuid.cpp  TestJsonSerializer.cpp  TestManagedPtr.cpp  TestManagedVector.cpp  TestMath.cpp  TestOOP.cpp  TestPlatform.cpp  TestProperty.cpp  TestReflection.cpp  TestString.cpp
(+8 files in other folders)
